--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ p{
 h2{
     font-family: 'Oswald';
     color: #094d74;
-    font-size: 18px;
+    font-size: 20px;
     line-height: 30px; 
     text-align: center;
 
@@ -42,7 +42,7 @@ h2{
 }
 
 .myProjects{
-    background-image: url('portfolio-background.jpg');
+    background-image: url('arkansas.jpg');
     background-size: 100% 100%;
     opacity: 1.0;
     background-repeat: no-repeat;   
@@ -91,6 +91,7 @@ li a{
 
 /*** my home page specific code ***/
 
+
 .container{
     padding-top:60px;
     width: 60%;
@@ -98,9 +99,10 @@ li a{
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
+    /* text-align: center; */
 }
 
-/**** My projects page specific cod ***/
+/**** My projects page specific code ***/
 
 .explore{
 
@@ -149,12 +151,17 @@ li a{
     padding: 20px;
 }
 
-a#project{
-    display: inline-block;
+
+/***** self picture *****/
+
+
+
+.profilePic {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-top: 10px;
 }
-
-
-
 
 
 
