--- a/style.css
+++ b/style.css
@@ -161,7 +161,29 @@ li a{
     height: 150px;
     border-radius: 50%;
     margin-top: 10px;
+    height: auto;
 }
 
 
+/****** media queries *******/
 
+@media screen and (max-width:480px) {
+    body {
+        width: 100%;
+        height: 100%;
+        max-width: 480px;
+        height:auto;
+        
+    }
+    .quizScreenShot{
+        width: 350px;
+    }
+  }
+  
+  @media screen and (max-width:1028px) {
+    body {
+        width: 100%;
+        height: 100%;
+        max-width: 1028px;
+    }
+   }
