--- a/style.css
+++ b/style.css
@@ -12,11 +12,13 @@ body{
 p{
     font-family: 'EB Garamond';
     color: #504F4F;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 30px; 
     padding-top: 50px;
     padding-bottom:50px;
     border-bottom: #094d74 solid 2px;
+    margin-left: auto;
+    margin-right: auto;
   
 }
 
@@ -122,8 +124,8 @@ li a{
 
 .quizScreenShot{
     display: block;
-    width: 500px;
-    height: 400px;
+    width: 300px;
+    height: 100px;
 }
 
 .icons{
@@ -151,6 +153,10 @@ li a{
     padding: 20px;
 }
 
+.projectContainer{
+    width: 70%;
+}
+
 
 /***** self picture *****/
 
@@ -167,23 +173,36 @@ li a{
 
 /****** media queries *******/
 
-@media screen and (max-width:480px) {
+@media screen and (min-width:480px) {
     body {
         width: 100%;
         height: 100%;
-        max-width: 480px;
+        min-width: 480px;
         height:auto;
         
     }
-    .quizScreenShot{
-        width: 350px;
+
+    .projectContainer{
+        width: 40%;
     }
+
   }
   
-  @media screen and (max-width:1028px) {
+  @media screen and (min-width:800px) {
     body {
         width: 100%;
         height: 100%;
-        max-width: 1028px;
+        min-width: 800px;
+    }
+
+    p{
+        font-size: 18px;
+        line-height: 30px
+    }
+
+    .quizScreenShot{
+        display: block;
+        width: 500px;
+        height: 400px;
     }
    }
