--- a/style.css
+++ b/style.css
@@ -140,7 +140,22 @@ li a{
     height: 150px;
     margin-top: 70px;
 }
-
+.tourScreenShot{
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    width: 250px;
+    height: 150px;
+    margin-top: 70px;
+}
+.motionScreenShot{
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    width: 250px;
+    height: 150px;
+    margin-top: 70px;
+}
 .icons{
    display: flex;
    flex-direction: row;
@@ -178,9 +193,19 @@ li a{
     margin-left:auto;
     margin-right:auto;
 }
+.tourLinks{
+    width:50%;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.motionLinks{
+    width:50%;
+    margin-left:auto;
+    margin-right:auto;
+}
 
 /***** self picture *****/
-
 
 
 .profilePic {
@@ -191,7 +216,6 @@ li a{
     height: auto;
 }
 
-
 /****** media queries *******/
 
 @media screen and (min-width:480px) {
@@ -199,8 +223,7 @@ li a{
         width: 100%;
         height: 100%;
         min-width: 480px;
-        height:auto;
-        
+        height:auto;      
     }
 
     .projectContainer{
@@ -215,23 +238,35 @@ li a{
         height: 100%;
         min-width: 800px;
     }
-
     p{
         font-size: 18px;
         line-height: 30px
     }
-
     .quizScreenShot{
         display: block;
         width: 500px;
         height: 400px;
     }
-
     .cookScreenShot{
         width: 400px;
         height: 250px;
-   }
-   .cookEasyLinks{
-    width:200px;
-   }
+     }
+    .cookEasyLinks{
+        width:200px;
+    }
+    .tourLinks{
+       width: 200px
+    }
+    
+    .motionLinks{
+        width: 200px;
+    }
+    .tourScreenShot{
+        width: 400px;
+        height: 250px;
+    }
+    .motionScreenShot{
+        width: 400px;
+        height: 250px;
+    }
 }
